# mimo

./: .env.example  DEBATE_FLOW_FIXED.md  ENDPOINTS_FIXED.md  FRONTEND_INTEGRATION_COMPLETE.md  GOOGLE_OAUTH_SETUP.md  INTEGRATION_SUMMARY.md  MULTIAGENT_FIXED.md  MULTIAGENT_README.md  dynamic_conversation.py  fiscal_recommendations.py  frontend_multiagent_example.html  main.py  messages.json  multi_agent_analysis.py  pyproject.toml  recommendations.db  report_template.html  server.py  tabla_isr_constants.py  tax_balance_report.html  test_multiagent.py
.github/: copilot-instructions.md
data/: sim1.json
tabla_isr/: isr_2024.json  isr_2025.json
templates/: _calculator_old.html  _index.html  calculator.html  login.html  recommendations.html
