[project]
name = "mimo"
version = "0.1.0"
description = "Calculadora de Saldo a Favor - Declaración Anual"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "google-generativeai>=0.8.0",
    "packaging>=25.0",
    "python-dotenv>=1.2.1",
    "fastapi>=0.120.1",
    "uvicorn>=0.38.0",
    "itsdangerous>=2.2.0",
    "python-jose[cryptography]>=3.5.0",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "requests>=2.32.5",
    "python-dateutil>=2.9.0.post0",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=62.0"
]
